Update index.html tambah teks

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://rtsp.me/embed/7QE84F5T/">test</a>
-
-    <iframe width="720" height="415" src="https://rtsp.me/embed/7QE84F5T/" frameborder="0"></iframe>
+    <div class="container">
+        <h2>Kamera CCTV HK</h2>
+        <iframe width="720" height="415" src="https://rtsp.me/embed/7QE84F5T/" frameborder="0"></iframe>
+    </div>   
 </body>
 </html>
